style.css
* {
    box-sizing: border-box;
}

/* Heading Section */

.heading-section-div {
    top: 0;
    position: relative;
    border: inset;
    border-width: 0px 0px 1px 0px;
    width: 100%;
    background-color: rgb(24, 24, 24);
    padding: 0 5%;
    z-index: 1000;
    color: #ff0096;
    border-color: #ff0096;
    /* Adjust z-index as needed */
}

.heading-section-div h1 {
    margin: 0px;
}

.heading-section h3 {
    /* or inline-block */
    text-align: center;
    justify-content: center;
    padding: 15px;
    /* Optional: Add some spacing between them */
}

/* Main Section */
body {
    margin: 0;
    font-family: 'Roboto', sans-serif;
    font-style: italic;
    color: white;
    background-color: #333;
}

.symbol-section {
    padding: 0 10%;
    width: 100%;
}

.close-button {
    position: fixed;
    top: 10px;
    right: 10px;
    cursor: pointer;
    z-index: 9999;
}

.close-button img {
    width: 30px;
    height: 30px;
}

h1 {
    font-size: 2.5rem;
    text-align: center;
    width: 100%;
}


h2 {
    font-size: 2rem;
    text-align: center;
    color: #ff0096;
    padding: 25px;
    width: 80%;
}

p {
    margin: 0.7rem;
    font-family: "Roboto", sans-serif;
    font-weight: bold;
    font-style: italic;
    font-size: 2.0rem;
    text-align: justify;
}

li {
    margin: 0.7rem;
    font-family: "Roboto", sans-serif;
    font-weight: bold;
    font-style: italic;
    font-size: 2.0rem;
}

/* Sub Container CSS*/

.sub-container {
    width: 80%;
    border: 1px solid white;
}

.sub-container-flex {
    width: 100%;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin: 50px 0px;
}


.sub-container-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 40px;
    align-self: center;
    width: 90%;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 1000px) {
    .sub-container-grid {
        grid-template-columns: repeat(1, 1fr);
    }
    h2 {
        font-size: 3rem;
    }

    p {
        font-size: 1.5rem;
    }
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 1000px) {
    .sub-container-grid {
        grid-template-columns: repeat(2, 1fr);
    }

    h2 {
        font-size: 3rem;
    }

    p {
        font-size: 1.5rem;
    }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 1400px) {
    .sub-container-grid {
        grid-template-columns: repeat(2, 1fr);
    }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1500px) {
    .sub-container-grid {
        grid-template-columns: repeat(3, 1fr);
    }
}


.sub-container-content-flex {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    gap: 0.5rem;
}

/* Sub Container - Symbol Content - CSS*/

p.sub-container-content-flex {
    text-align: center;
}

.image-container-symbol {
    flex: 0 0 30%;
    height: 100%;
    /* background-color: red; */
    aspect-ratio: 1;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    overflow: hidden;
}

.sub-container-content-grid {
    display: grid;
    gap: 20px;
}

.list-container-left {
    display: flex;
    height: 100%;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: left;
    margin-left: 5%;
}
.list-container-right {
    display: flex;
    height: 100%;
    flex-direction: column;
    flex: 1;
    justify-content: center;
    text-align: left;
    margin-left: 5%;
}

.value-special-content-div{
    display: flex;
}

.multiplier-symbol-value-text {
    color: #ff0096;
    font-weight: 900;
    font-size: 1.7rem;
    margin: 0px;
}

.symbol-value-text {
    color: white;
    font-size: 1.7rem;
    margin: 0px;
}

.symbol-specialContent-text {
    color: gold;
    font-size: 1.7rem;
    margin: 0px;
}

.list-div {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    margin-bottom: 0px;
}

/* Sub Container - Line Content - CSS*/

.sub-container-grid-line-layout {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 20px;
    align-self: center;
    width: 90%;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
    .sub-container-grid-line-layout {
        grid-template-columns: repeat(2, 1fr);
    }
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
    .sub-container-grid-line-layout {
        grid-template-columns: repeat(3, 1fr);
    }

    h1 {
        width: 100%;
        font-size: 3.5rem;
    }

    h2 {
        font-size: 3rem;
    }

    p {
        font-size: 2.0rem;
    }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
    .sub-container-grid-line-layout {
        grid-template-columns: repeat(4, 1fr);
    }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    .sub-container-grid-line-layout {
        grid-template-columns: repeat(5, 1fr);
    }
}

.line-layout-card {
    display: flex;
    flex-direction: column;
    width: 70%;
    height: 200px;
    border-width: 1px;
    border-style: dotted;
}

.line-layout-row {
    width: 100%;
    display: flex;
    /* border: 1px solid white; */
    /* height: 40px; */

}

.line-layout-column {
    width: 20%;
    height: 0;
    padding-bottom: 20%;
    /* 20% to match the width for a square shape */
    border: 1px solid white;
    box-sizing: border-box;
    position: relative;;

}

/* To ensure content inside the square */
.line-layout-column>* {
    position: absolute;
    width: 100%;
    height: 100%;
    margin: auto;
}

.line-number {
    font-size: 1.0rem;
    font-weight: 900;
}

.line-layout-text {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    padding: 25px;
}

.line-layout-text>p {
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-style: italic;
}

/* Sub Container - Feature Section - CSS*/

.singular-div-row {
    flex-direction: row;
    align-items: center;
    flex: 1;
    justify-content: center;
    flex-wrap: wrap;
}

.singular-div-column {
    flex-direction: column;
    flex: 1;
    align-items: center;
    justify-content: center;
}

@media (max-width: 600px) {
    .singular-div-column {
        flex-basis: 100%;
        /* Force each child to take 100% width when screen is <= 600px */
    }

    .singular-div-row {
        flex-basis: 100%;
        /* Force each child to take 100% width when screen is <= 600px */
    }
}


.content-div-class-flex-img {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: center;
}

.content-div-class-flex-text {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: center;
}

.content-div-class-flex-div {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
}

/* Image Section */

.div-big-type {
    min-width: 50%;
}

.big-image {
    object-fit: contain;
}

.small-image {
    max-width: 50%;
    object-fit: contain;
}

/* Button Section */

.sub-container-grid-button-layout {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 10px;
    align-self: center;
    align-items: center;
    width: 90%;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 900px) {
    .sub-container-grid-button-layout {
        grid-template-columns: repeat(1, 1fr);
    }
}

